# lightning-challenge

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: general.yml
.sqlx/: query-7e79d2d63d4b491f942fe2a7f11adc43e486e7cf4ef433533d9eb821b78a66ae.json
migrations/: 20240928180805_create_nodes_table.sql
scripts/: init_db.sh
src/: errors.rs  lib.rs  main.rs
src/routes/: mod.rs  nodes.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  nodes.rs
