[package]
name = "lightning-challenge"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.7.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.7", features = ["json"] }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "sqlx-postgres",
    "time",
    "bigdecimal",
] }
chrono = "0.4.38"
tower-http = { version = "0.6.1", features = ["trace"] }
